pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleExpected.pkl
hidden path: List<String> = import("moduleExpected.pkl").relativePathTo(module)
dummy = 42
result = (module) { dummy = 0 }.path
